--- a/WebUI/Views/Shared/_Footer.cshtml
+++ b/WebUI/Views/Shared/_Footer.cshtml
@@ -1,6 +1,3 @@
-﻿<hr>
-
-<footer>
-    <p style="float: right; display: block; margin-right: 30px;">&copy;@ViewBag.Company</p>
-
-</footer>
+﻿<div class="container">
+    <p class="muted credit">Example courtesy <a href="http://martinbean.co.uk">Martin Bean</a> and <a href="http://ryanfait.com/sticky-footer/">Ryan Fait</a>.</p>
+</div>
