--- a/WebUI/Views/Shared/_Layout.cshtml
+++ b/WebUI/Views/Shared/_Layout.cshtml
@@ -16,20 +16,26 @@
         body {
             padding-top: 60px;
             padding-bottom: 40px;
+            background-color: #f5f5f5;
+        }
+        /* Set the fixed height of the footer here */
+        #footer {
+            margin-top: 50px;
+            height: 60px;
+            background-color: #f5f5f5;
         }
     </style>
 </head>
 <body>
-    @Html.Partial("_NavTopBar");
-
-    <div class="container">
-
-        @RenderBody()
-
-        @Html.Partial("_Footer");
-
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        @Html.Partial("_NavTopBar")
     </div>
-
+    <div class="container">
+        @RenderBody()
+    </div>
+    <div id="footer">
+        @Html.Partial("_Footer")
+    </div>
 
     <!-- Le javascript
     ================================================== -->
