--- a/WebUI/Views/Shared/_NavTopBar.cshtml
+++ b/WebUI/Views/Shared/_NavTopBar.cshtml
@@ -1,61 +1,60 @@
 ﻿@model WebUI.Models.AccountModels.LogOnModel
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
-            <a class="brand" href="#">友学网</a>
-            <div class="nav-collapse collapse">
-                <ul class="nav">
-                    <li class="active">@Html.ActionLink("首页", "Index", "Home")</li>
-                    <li>@Html.ActionLink("注册", "Register", "Account")</li>
-                    <li>@Html.ActionLink("登录", "Logon", "Account")</li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">更多 <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("忘记密码", "ForgetPassWord", "Account")</li>
-                            <li>@Html.ActionLink("关于我们", "About", "Home")</li>
-                            <li class="divider"></li>
-                            <li>@Html.ActionLink("购买VIP", "VIP", "Home")</li>
 
-                        </ul>
-                    </li>
-                </ul>
+<div class="navbar-inner">
+    <div class="container">
+        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </a>
+        <a class="brand" href="#">友学网</a>
+        <div class="nav-collapse collapse">
+            <ul class="nav">
+                <li class="active">@Html.ActionLink("首页", "Index", "Home")</li>
+                <li>@Html.ActionLink("注册", "Register", "Account")</li>
+                <li>@Html.ActionLink("登录", "Logon", "Account")</li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">更多 <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>@Html.ActionLink("忘记密码", "ForgetPassWord", "Account")</li>
+                        <li>@Html.ActionLink("关于我们", "About", "Home")</li>
+                        <li class="divider"></li>
+                        <li>@Html.ActionLink("购买VIP", "VIP", "Home")</li>
+
+                    </ul>
+                </li>
+            </ul>
 
 
-                @if (Request.IsAuthenticated)
-                {
-                    <div class="btn-group pull-right">
-                        <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-                            <i class="icon-user"></i>@User.Identity.Name
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("个人信息", "Profile", "Account")</li>
-                            <li class="divider"></li>
-                            <li>@Html.ActionLink("注销", "LogOff", "Account")</li>
-                        </ul>
-                    </div>
-                }
-                else
-                {
-                    <form class="navbar-form pull-right form-inline" action="/account/logon" method="post">
-                        @Html.TextBoxFor(m => m.Email, new { style = "", placeholder = "输入绑定邮箱：", @class = "span2" })
-                        @Html.PasswordFor(m => m.Password, new { style = "", placeholder = "输入账号密码：", @class = "span2" })
-                        <label class="checkbox">
-                            记住我？
-                            @Html.CheckBoxFor(m => m.RememberMe, new { })
-                        </label>
+            @if (Request.IsAuthenticated)
+            {
+                <div class="btn-group pull-right">
+                    <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                        <i class="icon-user"></i>@User.Identity.Name
+                        <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li>@Html.ActionLink("个人信息", "Profile", "Account")</li>
+                        <li class="divider"></li>
+                        <li>@Html.ActionLink("注销", "LogOff", "Account")</li>
+                    </ul>
+                </div>
+            }
+            else
+            {
+                <form class="navbar-form pull-right form-inline" action="/account/logon" method="post">
+                    @Html.TextBoxFor(m => m.Email, new { style = "", placeholder = "输入绑定邮箱：", @class = "span2" })
+                    @Html.PasswordFor(m => m.Password, new { style = "", placeholder = "输入账号密码：", @class = "span2" })
+                    <span style="display: inline;">记住我</span>
+                    @Html.CheckBoxFor(m => m.RememberMe, new { })
 
-                        <button type="submit" class="btn">登录</button>
-                    </form>
-                }
 
-            </div>
-            <!--/.nav-collapse -->
+                    <button type="submit" class="btn">登录</button>
+                </form>
+            }
+
         </div>
+        <!--/.nav-collapse -->
     </div>
 </div>
+
