--- a/WebUI/Views/Shared/_Footer.cshtml
+++ b/WebUI/Views/Shared/_Footer.cshtml
@@ -1,3 +1,3 @@
 ﻿<div class="container">
-    <p class="muted credit">Example courtesy <a href="http://martinbean.co.uk">Martin Bean</a> and <a href="http://ryanfait.com/sticky-footer/">Ryan Fait</a>.</p>
+    <p class="muted credit">楚广明 MVC开发样例 <a href="http://www.cnblogs.com/chu888chu888"> chu888chu888</a></p>
 </div>
