--- a/WebUI/Views/Shared/_NavTopBar.cshtml
+++ b/WebUI/Views/Shared/_NavTopBar.cshtml
@@ -9,21 +9,45 @@
         </a>
         <a class="brand" href="#">友学网</a>
         <div class="nav-collapse collapse">
-            <ul class="nav">
-                <li class="active">@Html.ActionLink("首页", "Index", "Home")</li>
-                <li>@Html.ActionLink("注册", "Register", "Account")</li>
-                <li>@Html.ActionLink("登录", "Logon", "Account")</li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">更多 <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li>@Html.ActionLink("忘记密码", "ForgetPassWord", "Account")</li>
-                        <li>@Html.ActionLink("关于我们", "About", "Home")</li>
-                        <li class="divider"></li>
-                        <li>@Html.ActionLink("购买VIP", "VIP", "Home")</li>
 
-                    </ul>
-                </li>
-            </ul>
+            @if (Request.IsAuthenticated)
+            {
+                <ul class="nav">
+                    <li class="active">@Html.ActionLink("首页", "Index", "Home")</li>
+                    <li>@Html.ActionLink("相册", "All", "Photo")</li>
+                    <li>@Html.ActionLink("关系", "All", "Friend")</li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">更多 <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("更多朋友", "Search", "Friend")</li>
+                            <li>@Html.ActionLink("关于我们", "About", "Home")</li>
+                            <li class="divider"></li>
+                            <li>@Html.ActionLink("购买VIP", "VIP", "Home")</li>
+
+                        </ul>
+                    </li>
+                </ul>
+            }
+            else
+            {
+                <ul class="nav">
+                    <li class="active">@Html.ActionLink("首页", "Index", "Home")</li>
+                    <li>@Html.ActionLink("注册", "Register", "Account")</li>
+                    <li>@Html.ActionLink("登录", "Logon", "Account")</li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">更多 <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("忘记密码", "ForgetPassWord", "Account")</li>
+                            <li>@Html.ActionLink("关于我们", "About", "Home")</li>
+                            <li class="divider"></li>
+                            <li>@Html.ActionLink("购买VIP", "VIP", "Home")</li>
+
+                        </ul>
+                    </li>
+                </ul>
+            }
+
+
 
 
             @if (Request.IsAuthenticated)
