完成用户记录

--- a/WebUI/Views/Home/Manager.cshtml
+++ b/WebUI/Views/Home/Manager.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Manager";
 }
 
-<h2>Manager</h2>
+<h2>@ViewBag.UserID</h2>
 <div class="row-fluid">
     <div class="span3">
         <div class="well sidebar-nav">
