--- a/WebUI/Views/Shared/_NavTopBar.cshtml
+++ b/WebUI/Views/Shared/_NavTopBar.cshtml
@@ -1,6 +1,4 @@
-﻿@model WebUI.Models.AccountModels.LogOnModel
-
-<div class="navbar-inner">
+﻿<div class="navbar-inner">
     <div class="container">
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
@@ -20,6 +18,8 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">更多 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("更多朋友", "Search", "Friend")</li>
+                            <li>@Html.ActionLink("建议反馈", "Append", "Note")</li>
+                            <li>@Html.ActionLink("查看所有留言", "BrowseAll", "Note")</li>
                             <li>@Html.ActionLink("关于我们", "About", "Home")</li>
                             <li class="divider"></li>
                             <li>@Html.ActionLink("购买VIP", "VIP", "Home")</li>
@@ -65,7 +65,7 @@
                 </div>
             }
             else
-            {
+            {   @*
                 <form class="navbar-form pull-right form-inline" action="/account/logon" method="post">
                     @Html.TextBoxFor(m => m.Email, new { style = "", placeholder = "输入绑定邮箱：", @class = "span2" })
                     @Html.PasswordFor(m => m.Password, new { style = "", placeholder = "输入账号密码：", @class = "span2" })
@@ -75,6 +75,7 @@
 
                     <button type="submit" class="btn">登录</button>
                 </form>
+                *@
             }
 
         </div>
