--- a/WebUI/Views/Home/Manager.cshtml
+++ b/WebUI/Views/Home/Manager.cshtml
@@ -1,82 +1,130 @@
 ﻿@{
     ViewBag.Title = "Manager";
 }
+<style type="text/css">
+    .divShowPhoto {
+        float: left;
+        width: 180px;
+        height: 400px;
+        margin: 10px;
+    }
 
-<h2>@ViewBag.UserID</h2>
+    .title {
+        line-height: 80px;
+        font-size: 18px;
+        color: #900;
+        text-align: center;
+        font-family: "Microsoft YaHei";
+    }
+</style>
+<h2>@*@ViewBag.UserID*@</h2>
 <div class="row-fluid">
     <div class="span3">
         <div class="well sidebar-nav">
             <ul class="nav nav-list">
-                <li class="nav-header">Sidebar</li>
-                <li class="active"><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li class="nav-header">Sidebar</li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li class="nav-header">Sidebar</li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
+                @foreach (var tmp in ViewBag.classify)
+                {          
+                    <li>
+                        <a href="/Home/Detail/@tmp.Key">@tmp.Value</a>
+                    </li>
+                }
             </ul>
         </div>
         <!--/.well -->
     </div>
     <!--/span-->
     <div class="span9">
-        <div class="hero-unit">
-            <h1>Hello, world!</h1>
-            <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-            <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-        </div>
+
         <div class="row-fluid">
-            <div class="span4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
+            <div class="divShowPhoto">
+                <h4>文艺青年</h4>
+                <p>
+                    <img src="~/Images/1.jpg" />
+                </p>
+                <p>
+                    <a class="btn" href="#">围观</a>
+                    <a class="btn" href="#">我顶</a>
+                    <a class="btn" href="#">收藏</a>
+                </p>
             </div>
-            <!--/span-->
-            <div class="span4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
+            <div class="divShowPhoto">
+                <h4>文艺青年</h4>
+                <p>
+                    <img src="~/Images/1.jpg" />
+                </p>
+                <p>
+                    <a class="btn" href="#">围观</a>
+                    <a class="btn" href="#">我顶</a>
+                    <a class="btn" href="#">收藏</a>
+                </p>
             </div>
-            <!--/span-->
-            <div class="span4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
+            <div class="divShowPhoto">
+                <h4>文艺青年</h4>
+                <p>
+                    <img src="~/Images/1.jpg" />
+                </p>
+                <p>
+                    <a class="btn" href="#">围观</a>
+                    <a class="btn" href="#">我顶</a>
+                    <a class="btn" href="#">收藏</a>
+                </p>
             </div>
-            <!--/span-->
+            <div class="divShowPhoto">
+                <h4>文艺青年</h4>
+                <p>
+                    <img src="~/Images/1.jpg" />
+                </p>
+                <p>
+                    <a class="btn" href="#">围观</a>
+                    <a class="btn" href="#">我顶</a>
+                    <a class="btn" href="#">收藏</a>
+                </p>
+            </div>
+            <div class="divShowPhoto">
+                <h4>文艺青年</h4>
+                <p>
+                    <img src="~/Images/8.jpg" />
+                </p>
+                <p>
+                    <a class="btn" href="#">围观</a>
+                    <a class="btn" href="#">我顶</a>
+                    <a class="btn" href="#">收藏</a>
+                </p>
+            </div>
+            <div class="divShowPhoto">
+                <h4>文艺青年</h4>
+                <p>
+                    <img src="~/Images/6.jpg" />
+                </p>
+                <p>
+                    <a class="btn" href="#">围观</a>
+                    <a class="btn" href="#">我顶</a>
+                    <a class="btn" href="#">收藏</a>
+                </p>
+            </div>
+            <div class="divShowPhoto">
+                <h4>文艺青年</h4>
+                <p>
+                    <img src="~/Images/7.jpg" />
+                </p>
+                <p>
+                    <a class="btn" href="#">围观</a>
+                    <a class="btn" href="#">我顶</a>
+                    <a class="btn" href="#">收藏</a>
+                </p>
+            </div>
+            <div class="divShowPhoto">
+                <h4>文艺青年</h4>
+                <p>
+                    <img src="~/Images/8.jpg" />
+                </p>
+                <p>
+                    <a class="btn" href="#">围观</a>
+                    <a class="btn" href="#">我顶</a>
+                    <a class="btn" href="#">收藏</a>
+                </p>
+            </div>
         </div>
-        <!--/row-->
-        <div class="row-fluid">
-            <div class="span4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-            <!--/span-->
-            <div class="span4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-            <!--/span-->
-            <div class="span4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-            <!--/span-->
-        </div>
-        <!--/row-->
     </div>
-    <!--/span-->
 </div>
-<!--/row-->
+
