--- a/WebUI/Views/Shared/_Layout.cshtml
+++ b/WebUI/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
             padding-top: 60px;
             padding-bottom: 40px;
             background-color: #f5f5f5;
+            font-family: "Microsoft YaHei" ! important;
         }
         /* Set the fixed height of the footer here */
         #footer {
