--- a/WebUI/Views/Shared/_NavTopBar.cshtml
+++ b/WebUI/Views/Shared/_NavTopBar.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="navbar-inner">
+﻿@using WebBusiness.AccountBusiness
+@{
+    ViewBag.UserName = AccountOperation.GetUserName(User.Identity.Name);
+}
+<div class="navbar-inner">
     <div class="container">
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
@@ -54,7 +58,9 @@
             {
                 <div class="btn-group pull-right">
                     <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="icon-user"></i>@User.Identity.Name
+                        <i class="icon-user"></i>
+                        @*@User.Identity.Name*@
+                        @ViewBag.UserName
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
