--- a/WebUI/Views/Shared/_Layout.cshtml
+++ b/WebUI/Views/Shared/_Layout.cshtml
@@ -17,7 +17,8 @@
             padding-top: 60px;
             padding-bottom: 40px;
             background-color: #f5f5f5;
-            font-family: "Microsoft YaHei" ! important;
+            font-family: "Microsoft YaHei" !important;
+            font-size: 12px;
         }
         /* Set the fixed height of the footer here */
         #footer {
@@ -41,7 +42,7 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/Content/Bootstrap/js/jquery.js"></script>
+    <script src="~/Scripts/jquery-1.7.2.min.js"></script>
     <script src="/Content/Bootstrap/js/bootstrap-transition.js"></script>
     <script src="/Content/Bootstrap/js/bootstrap-alert.js"></script>
     <script src="/Content/Bootstrap/js/bootstrap-modal.js"></script>
