--- a/WebUI/Views/Home/Manager.cshtml
+++ b/WebUI/Views/Home/Manager.cshtml
@@ -2,24 +2,58 @@
     ViewBag.Title = "Manager";
 }
 <style type="text/css">
-    .divShowPhoto {
-        float: left;
-        width: 180px;
-        height: 400px;
-        margin: 10px;
+    .waterfallcontainer {
+        -webkit-column-width: 230px;
+        //webkit内核浏览器，列与列之间的宽度 -moz-column-width:230px;
+        -o-colum-width: 230px;
+        -webkit-column-gap: 10px;
+        //webkit内核浏览器，列与列之间的缝隙 -moz-column-gap:10px;
+        -o-column-gap: 10px;
+        text-align: center;
+        width: auto;
     }
 
-    .title {
-        line-height: 80px;
-        font-size: 18px;
-        color: #900;
-        text-align: center;
-        font-family: "Microsoft YaHei";
+        .waterfallcontainer div {
+            border-radius: 5px;
+            //圆角 background:#f5f5f5;
+            border: #ccc 1px solid;
+            display: inline-block;
+            width: auto;
+            position: relative;
+            text-align: center;
+            margin-bottom: 10px;
+        }
+
+            .waterfallcontainer div img {
+                margin: 10px 10px 0 10px;
+            }
+
+            .waterfallcontainer div p {
+                padding: 0px 10px 0px 10px;
+                margin: 0px;
+                line-height: 25px;
+                text-align: left;
+                font-size: 12px;
+            }
+
+    .actions {
+        left: 0;
+        position: absolute;
+        top: 5px;
+        width: 100%;
+        z-index: 3;
+        display: none;
     }
 </style>
+<script type="text/javascript" src="~/Scripts/jquery-1.7.1.js"></script>
+<script type="text/javascript">
+    $(function () {
+
+    });
+</script>
 <h2>@*@ViewBag.UserID*@</h2>
 <div class="row-fluid">
-    <div class="span3">
+    <div class="span2">
         <div class="well sidebar-nav">
             <ul class="nav nav-list">
                 @foreach (var tmp in ViewBag.classify)
@@ -33,97 +67,61 @@
         <!--/.well -->
     </div>
     <!--/span-->
-    <div class="span9">
+    <div class="span10">
+        <div class="waterfallcontainer">
+            <div>
+                <img src="/images/1.JPG" alt="纯CSS瀑布流" width="210"><p>这是一个纯CSS的瀑布流这是一个纯CSS的瀑布流这是一个纯CSS的瀑布流</p>
+                <div class="actions">
+                    <div class="lefter"><a class="button white" href="#">评论</a></div>
+                    <div class="righter"><a class="button white" href="#">分享</a></div>
+                </div>
+            </div>
+            <div>
+                <img src="/images/2.JPG" alt="纯CSS瀑布流" width="210"><p>这是一个纯CSS的瀑布流</p>
+            </div>
+            <div>
+                <img src="/images/3.JPG" alt="纯CSS瀑布流" width="210"><p>这是一个纯CSS的瀑布流</p>
+            </div>
+            <div>
+                <img src="/images/4.JPG" alt="纯CSS瀑布流" width="210"><p>这是一个纯CSS的瀑布流</p>
+            </div>
+            <div>
+                <img src="/images/8.JPG" alt="纯CSS瀑布流" width="210"><p>这是一个纯CSS的瀑布流</p>
+            </div>
+            <div>
+                <img src="/images/6.JPG" alt="纯CSS瀑布流" width="210"><p>这是一个纯CSS的瀑布流</p>
+            </div>
+            <div>
+                <img src="/images/7.JPG" alt="纯CSS瀑布流" width="210"><p>这是一个纯CSS的瀑布流</p>
+            </div>
+            <div>
+                <img src="/images/8.JPG" alt="纯CSS瀑布流" width="210"><p>这是一个纯CSS的瀑布流</p>
+            </div>
+            <div>
+                <img src="/images/9.JPG" alt="纯CSS瀑布流" width="210"><p>这是一个纯CSS的瀑布流</p>
+            </div>
+            <div>
+                <img src="/images/10.JPG" alt="纯CSS瀑布流" width="210"><p>这是一个纯CSS的瀑布流</p>
+            </div>
+            <div>
+                <img src="/images/11.JPG" alt="纯CSS瀑布流" width="210"><p>这是一个纯CSS的瀑布流</p>
+            </div>
+            <div>
+                <img src="/images/12.JPG" alt="纯CSS瀑布流" width="210"><p>这是一个纯CSS的瀑布流</p>
+            </div>
+            <div>
+                <img src="/images/13.JPG" alt="纯CSS瀑布流" width="210"><p>这是一个纯CSS的瀑布流</p>
+            </div>
+            <div>
+                <img src="/images/14.JPG" alt="纯CSS瀑布流" width="210"><p>这是一个纯CSS的瀑布流</p>
+            </div>
+            <div>
+                <img src="/images/15.JPG" alt="纯CSS瀑布流" width="210"><p>这是一个纯CSS的瀑布流</p>
+            </div>
+            <div>
+                <img src="/images/16.JPG" alt="纯CSS瀑布流" width="210"><p>这是一个纯CSS的瀑布流</p>
+            </div>
 
-        <div class="row-fluid">
-            <div class="divShowPhoto">
-                <h4>文艺青年</h4>
-                <p>
-                    <img src="~/Images/1.jpg" />
-                </p>
-                <p>
-                    <a class="btn" href="#">围观</a>
-                    <a class="btn" href="#">我顶</a>
-                    <a class="btn" href="#">收藏</a>
-                </p>
-            </div>
-            <div class="divShowPhoto">
-                <h4>文艺青年</h4>
-                <p>
-                    <img src="~/Images/1.jpg" />
-                </p>
-                <p>
-                    <a class="btn" href="#">围观</a>
-                    <a class="btn" href="#">我顶</a>
-                    <a class="btn" href="#">收藏</a>
-                </p>
-            </div>
-            <div class="divShowPhoto">
-                <h4>文艺青年</h4>
-                <p>
-                    <img src="~/Images/1.jpg" />
-                </p>
-                <p>
-                    <a class="btn" href="#">围观</a>
-                    <a class="btn" href="#">我顶</a>
-                    <a class="btn" href="#">收藏</a>
-                </p>
-            </div>
-            <div class="divShowPhoto">
-                <h4>文艺青年</h4>
-                <p>
-                    <img src="~/Images/1.jpg" />
-                </p>
-                <p>
-                    <a class="btn" href="#">围观</a>
-                    <a class="btn" href="#">我顶</a>
-                    <a class="btn" href="#">收藏</a>
-                </p>
-            </div>
-            <div class="divShowPhoto">
-                <h4>文艺青年</h4>
-                <p>
-                    <img src="~/Images/8.jpg" />
-                </p>
-                <p>
-                    <a class="btn" href="#">围观</a>
-                    <a class="btn" href="#">我顶</a>
-                    <a class="btn" href="#">收藏</a>
-                </p>
-            </div>
-            <div class="divShowPhoto">
-                <h4>文艺青年</h4>
-                <p>
-                    <img src="~/Images/6.jpg" />
-                </p>
-                <p>
-                    <a class="btn" href="#">围观</a>
-                    <a class="btn" href="#">我顶</a>
-                    <a class="btn" href="#">收藏</a>
-                </p>
-            </div>
-            <div class="divShowPhoto">
-                <h4>文艺青年</h4>
-                <p>
-                    <img src="~/Images/7.jpg" />
-                </p>
-                <p>
-                    <a class="btn" href="#">围观</a>
-                    <a class="btn" href="#">我顶</a>
-                    <a class="btn" href="#">收藏</a>
-                </p>
-            </div>
-            <div class="divShowPhoto">
-                <h4>文艺青年</h4>
-                <p>
-                    <img src="~/Images/8.jpg" />
-                </p>
-                <p>
-                    <a class="btn" href="#">围观</a>
-                    <a class="btn" href="#">我顶</a>
-                    <a class="btn" href="#">收藏</a>
-                </p>
-            </div>
         </div>
     </div>
 </div>
